--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
       <h2>Summary</h2> 
 
       <div class="cell reaction">
-        <p>Reaction</p>
-        <p><span>80</span> / 100</p>
+        <p class="category">Reaction</p>
+        <p><span class="score">80</span> / 100</p>
       </div>
       <div class="cell memory">
-        <p>Memory</p>
-        <p><span>92</span> / 100</p>
+        <p class="category">Memory</p>
+        <p><span class="score">92</span> / 100</p>
       </div>
       <div class="cell verbal">
-        <p>Verbal</p>
-        <p><span>61</span> / 100</p>
+        <p class="category">Verbal</p>
+        <p><span class="score">61</span> / 100</p>
       </div>
       <div class="cell visual">
-        <p>Visual</p>
-        <p><span>72</span> / 100</p>
+        <p class="category">Visual</p>
+        <p><span class="score">72</span> / 100</p>
       </div>
 
       <button>Continue</button>
