--- a/index.html
+++ b/index.html
@@ -20,30 +20,43 @@
     <div class="result">
       <h2>Your Result</h2>
       <div class="circle">
-        <div class="points">76</div>
+        <div class="bg"></div>
+        <div class="points"></div>
         <p class="of100">of 100</p> 
       </div>
-      <h1>Great</h1>
+      <h1 id="congrats">Great</h1>
       <p class="text">You scored higher than 65% of the people who have taken these tests.</p>
     </div>
     <div class="summary">
       <h2>Summary</h2> 
 
       <div class="cell reaction">
-        <p class="category">Reaction</p>
-        <p><span class="score">80</span> / 100</p>
+        <div class="title">
+          <img class="icon" src="" alt="">
+          <p class="category"></p>
+        </div>
+        <p><span class="score"></span> / 100</p>
       </div>
       <div class="cell memory">
-        <p class="category">Memory</p>
-        <p><span class="score">92</span> / 100</p>
+        <div class="title">
+          <img class="icon" src="" alt="">
+          <p class="category"></p>
+        </div>
+        <p><span class="score"></span> / 100</p>
       </div>
       <div class="cell verbal">
-        <p class="category">Verbal</p>
-        <p><span class="score">61</span> / 100</p>
+        <div class="title">
+          <img class="icon" src="" alt="">
+          <p class="category"></p>
+        </div>
+        <p><span class="score"></span> / 100</p>
       </div>
       <div class="cell visual">
-        <p class="category">Visual</p>
-        <p><span class="score">72</span> / 100</p>
+        <div class="title">
+          <img class="icon" src="" alt="">
+          <p class="category"></p>
+        </div>
+        <p><span class="score"></span> / 100</p>
       </div>
 
       <button>Continue</button>
@@ -56,5 +69,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
+  <script src="app.js" defer></script>
 </body>
 </html>
