--- a/index.html
+++ b/index.html
@@ -32,31 +32,31 @@
 
       <div class="cell reaction">
         <div class="title">
-          <img class="icon" src="" alt="">
+          <img class="icon" src="">
           <p class="category"></p>
         </div>
-        <p><span class="score"></span> / 100</p>
+        <p><span class="score"></span>&nbsp; / 100</p>
       </div>
       <div class="cell memory">
         <div class="title">
-          <img class="icon" src="" alt="">
+          <img class="icon" src="">
           <p class="category"></p>
         </div>
-        <p><span class="score"></span> / 100</p>
+        <p><span class="score"></span>&nbsp; / 100</p>
       </div>
       <div class="cell verbal">
         <div class="title">
-          <img class="icon" src="" alt="">
+          <img class="icon" src="">
           <p class="category"></p>
         </div>
-        <p><span class="score"></span> / 100</p>
+        <p><span class="score"></span>&nbsp; / 100</p>
       </div>
       <div class="cell visual">
         <div class="title">
-          <img class="icon" src="" alt="">
+          <img class="icon" src="">
           <p class="category"></p>
         </div>
-        <p><span class="score"></span> / 100</p>
+        <p><span class="score"></span>&nbsp; / 100</p>
       </div>
 
       <button>Continue</button>
